<resources>
    <string name="app_name">SISROB</string>
    <string name="menu_Pop1">EQUIPOS</string>
    <string name="menu_Pop2"> VIDEOS</string>
    <string name="menu_Pop3"> NOTICIAS</string>
    <string name="menu_Pop4"> REGISTRO DE FALLAS</string>
    <string name="menu_Pop5"> SOLICITUD DE REPUESTOS</string>
    <string name="menu_Pop6"> CERRAR SESION</string>
    <string name="opciones">OPCIONES</string>
    <string name="bienvenido_a">Bienvenido(a):</string>
    <string name="menu_Eqop1">MIXER</string>
    <string name="menu_Eqop2"> ROBOT</string>
    <string name="menu_Eqop3"> CARGADOR FRONTAL</string>
    <string name="menu_Eqop4"> CAMIONES/BUSES</string>
    <string name="usuario"> Usuario</string>
    <string name="psw"> Contraseña</string>
    <string name="btnIngresar"> Ingresar</string>
    <string name="olvide_contraseña"><u>¿Has olvidado tu contraseña?</u></string>
    <string name="recupera">RECUPERAR CONTRASEÑA</string>
    <string name="recupera_text1">Por favor, introduce tu correo electronico</string>
    <string name="recupera_text2"><u>Volver al inicio de sesion</u></string>
    <string name="valrecup_text1">CORREO DE RECUPERACION</string>
    <string name="valrecup_text2">DE CONTRASEÑA ENVIADO</string>
    <string name="valrecup_text3">Siga las Instrucciones para restablecer</string>
    <string name="valrecup_text4">su contraseña</string>
    <string name="btnIniciarSesion"> INICIAR SESION</string>
    <string name="titulo_videos"> VIDEOS</string>
    <string name="titulo_noticias">NOTICIAS</string>
    <string name="titulo_fallas">REGISTRO DE FALLAS</string>
    <string name="titulo_repuestos">SOLICITUD DE REPUESTOS</string>
    <string name="titulo_lista_video">Titulo de Video</string>
    <string name="titulo_filtro_eq">FILTRO EQUIPOS</string>
    <string name="registrar_videos">Registrar Videos</string>
    <string name="grabar_video">GRABAR VIDEO</string>
    <string name="grabar_equipo">GRABAR EQUIPO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>