<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/arimo"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/bienvenido_a"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOpciones" />

    <TextView
        android:id="@+id/txtOpciones"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="#000000"
        android:fontFamily="@font/arimo"
        android:gravity="center"
        android:text="@string/opciones"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgMenOp1"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:background="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario"
        app:srcCompat="@drawable/ic_equipos"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imgMenOp2"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMenOp1"
        app:srcCompat="@drawable/ic_videos"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imgMenOp3"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMenOp2"
        app:srcCompat="@drawable/ic_noticias"
        android:contentDescription="TODO" />

    <ImageView
        android:id="@+id/imgMenOp4"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMenOp3"
        app:srcCompat="@drawable/ic_fallas" />

    <ImageView
        android:id="@+id/imgMenOp6"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMenOp5"
        app:srcCompat="@drawable/ic_cerrar_sesion"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/txtEquipo"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:background="@color/principal"
        android:fontFamily="@font/arimo"
        android:gravity="left|center_vertical"
        android:padding="20dp"
        android:text="@string/menu_Pop1"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgMenOp1"
        app:layout_constraintTop_toBottomOf="@+id/txtUsuario" />

    <TextView
        android:id="@+id/txtVideos"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        android:fontFamily="@font/arimo"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/menu_Pop2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgMenOp2"
        app:layout_constraintTop_toBottomOf="@+id/txtEquipo" />

    <TextView
        android:id="@+id/txtNoticias"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:autoLink="web"
        android:background="@color/principal"
        android:fontFamily="@font/arimo"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/menu_Pop3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgMenOp3"
        app:layout_constraintTop_toBottomOf="@+id/txtVideos" />

    <TextView
        android:id="@+id/txtRegFallas"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        android:fontFamily="@font/arimo"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/menu_Pop4"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imgMenOp4"
        app:layout_constraintTop_toBottomOf="@+id/txtNoticias" />

    <TextView
        android:id="@+id/txtCerrarSesion"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        android:fontFamily="@font/arimo"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/menu_Pop6"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgMenOp6"
        app:layout_constraintTop_toBottomOf="@+id/txtSolRepuesto" />

    <TextView
        android:id="@+id/txtSolRepuesto"
        android:layout_width="0dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        android:fontFamily="@font/arimo"
        android:gravity="center_vertical"
        android:padding="20dp"
        android:text="@string/menu_Pop5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/imgMenOp5"
        app:layout_constraintTop_toBottomOf="@+id/txtRegFallas" />

    <ImageView
        android:id="@+id/imgMenOp5"
        android:layout_width="100dp"
        android:layout_height="70dp"
        android:layout_marginTop="2dp"
        android:background="@color/principal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgMenOp4"
        app:srcCompat="@drawable/ic_repuestos"
        android:contentDescription="TODO" />
</androidx.constraintlayout.widget.ConstraintLayout>